fixed nav shifting and made sure signon disappears if signedon and errors if incorrect

--- a/src/components/Navigation/styles/navigation.scss
+++ b/src/components/Navigation/styles/navigation.scss
@@ -1,6 +1,7 @@
 .navigation {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: auto;
